Add functionality to calculator

--- a/index.html
+++ b/index.html
@@ -15,33 +15,33 @@
             <p class="display" id="display-bottom"></p>
         </div>
         <div id="backbtns">
-            <button class="backbtn" id="clearbtn">CLEAR</button>
-            <button class="backbtn" id="deletebtn">DELETE</button>
+            <button data-key="27" class="backbtn" id="clearbtn">CLEAR</button>
+            <button data-key="8" class="backbtn" id="deletebtn">DELETE</button>
         </div>
         <div id="mathbtns">
             <div class="btnrow">
-                <button class="mathbtn">7</button>
-                <button class="mathbtn">8</button>
-                <button class="mathbtn">9</button>
-                <button class="mathbtn">&divide;</button>
+                <button data-key="55" class="mathbtn number">7</button>
+                <button data-key="56" class="mathbtn number">8</button>
+                <button data-key="57" class="mathbtn number">9</button>
+                <button data-key="191" class="mathbtn operator" id="divide">&divide;</button>
             </div>
             <div class="btnrow">
-                <button class="mathbtn">4</button>
-                <button class="mathbtn">5</button>
-                <button class="mathbtn">6</button>
-                <button class="mathbtn">x</button>
+                <button data-key="52" class="mathbtn number">4</button>
+                <button data-key="53" class="mathbtn number">5</button>
+                <button data-key="54" class="mathbtn number">6</button>
+                <button data-key="shift 56" class="mathbtn operator" id="multiply">&times;</button>
             </div>
             <div class="btnrow">
-                <button class="mathbtn">1</button>
-                <button class="mathbtn">2</button>
-                <button class="mathbtn">3</button>
-                <button class="mathbtn">-</button>
+                <button data-key="49" class="mathbtn number">1</button>
+                <button data-key="50" class="mathbtn number">2</button>
+                <button data-key="51" class="mathbtn number">3</button>
+                <button data-key="189" class="mathbtn operator" id="subtract">-</button>
             </div>
             <div class="btnrow">
-                <button class="mathbtn">.</button>
-                <button class="mathbtn">0</button>
-                <button class="mathbtn">=</button>
-                <button class="mathbtn">+</button>              
+                <button data-key="190" class="mathbtn decimal">.</button>
+                <button data-key="48" class="mathbtn number">0</button>
+                <button data-key="13" class="mathbtn equals">=</button>
+                <button data-key="shift 187" class="mathbtn operator" id="add">+</button>              
             </div>
         </div>
     </div>
