--- a/index.html
+++ b/index.html
@@ -45,5 +45,8 @@
             </div>
         </div>
     </div>
+    <div id="footer">
+        <p id="footer-text">Copyright &copy; 2021 Cory Parham, through The Odin Project curriculum.</p>
+    </div>
 </body>
 </html>
